# pico_guitar_to_midi

./: .gitignore  CMakeLists.txt
src/: main.c
